# technical_data_analysis

./: README.md  pyproject.toml
technical_data_analysis_using_algorithms/: cash.json  functions.py  main.py  result.csv
