[tool.poetry]
name = "technical-data-analysis-using-algorithms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "technical_data_analysis_using_algorithms"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
